@@ -35,6 +35,7 @@ enum class ScenarioSetSetting : uint8_t
     ParkRatingHigherDifficultyLevel,
     GuestGenerationHigherDifficultyLevel,
     AllowEarlyCompletion,
+    UseRCT1Interest,
     Count
 };
 
